data/archive/datax_original/spectra_guardian/SpectraGuardian_FullDeploymentBundle/k8s/service-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: spectra-guardian-dashboard
spec:
  type: LoadBalancer
  ports:
    - port: 8501
      targetPort: 8501
  selector:
    app: spectra-guardian-dashboard
